# wowmapeditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: GenerateVersion.cmake
src/: version.h.in
src/editor/: CMakeLists.txt  main.cpp
